# peeve

./: .gitignore  README.md  peeve.py  pyproject.toml  setup.cfg  tox.ini
src/: peeve.py
tests/: conftest.py  test_cli.py  test_discovery.py  test_hash.py  test_venv.py
