[metadata]
name = peeve
description = Script launcher with automatic installation of dependencies
long_description = file: README.md
version = 0.1.0
license = MIT
author = Marco Weber
author_email = marco.weber@hotmail.de
url = https://github.com/comabrewer/peeve

[options]
py_modules = peeve

[options.entry_points]
console_scripts =
    peeve = peeve:cli
    pv = peeve:cli
