[metadata]
name = peeve
description = Script launcher with automatic installation of dependencies
long_description = file: README.md
version = 0.1.0
license = MIT
author = Marco Weber
author_email = marco.weber@hotmail.de
url = https://github.com/comabrewer/peeve

[options]
python_requires = >=3.7
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    peeve = peeve:cli
    pv = peeve:cli

[options.extras_require]
dev =
    black
    flake8
    flake8-docstrings
    isort
    mypy
    pylint
test =
    pytest
